tests/neg/i10603b.check
-- Error: tests/neg/i10603b.scala:4:35 ---------------------------------------------------------------------------------
4 |  val x = implicitly[List[Boolean]] // error
  |                                   ^
  |                                   No implicit view available from Int => Boolean.
